# flare

./: .gitignore  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYRIGHT.md  CTestConfig.cmake  LICENSE  README.md  carbin_deps.txt  vcpkg.json
examples/: .clang-format  CMakeLists.txt  README.md
examples/01_hello_word/: CMakeLists.txt  hello_world.cc
examples/02_device/: CMakeLists.txt  query_device.cc
examples/03_lambda/: CMakeLists.txt  hello_world_lambda.cu
examples/04_simple_reduce/: CMakeLists.txt  simple_reduce.cc  simple_reduce_lambda.cc
examples/05_tensor/: CMakeLists.txt  simple_tensor.cc  simple_tensor_lambda.cu
examples/05_view/: CMakeLists.txt  simple_view.cc  simple_view_lambda.cc
examples/06_memory_space/: CMakeLists.txt  memory_space.cc  memory_space.cu
examples/07_atomic/: CMakeLists.txt  atomics.cc
examples/08_mdrange_policy/: CMakeLists.txt  mdrangepolicy.cc
examples/09_algorithm/: CMakeLists.txt  random_numbers.cc  random_numbers.cu
examples/10_advance_tensor/: CMakeLists.txt  data_layouts.cc  data_layouts.cu  dual_tensor.cu  memory_traits.cu  subtensors.cu
examples/10_advance_view/: CMakeLists.txt  data_layouts.cc  data_layouts.cu  dual_view.cu  memory_traits.cu  subviews.cu
examples/11_parallel/: CMakeLists.txt  launch_bounds_reduce.cc  nested_parallel_for.cc  team_scan.cc  thread_teams.cc  thread_teams_lambda.cc  vectorization.cc
examples/12_simd/: CMakeLists.txt  mandelbrot.cc  pico_bench.h
examples/13_ann/: CMakeLists.txt  README.md  distance_hamming.cc  distance_ip.cc  distance_jaccard.cc  distance_l1.cc  distance_l1.cu  distance_l2_batch.cc  norm_l1.cc  norm_l1.cu  norm_l2.cc  parallel_distance_l2.cc  parallel_distance_l2_batch.cc  parallel_distance_l2_openmp.cc
examples/1_device/: CMakeLists.txt
examples/benchmarks/: CMakeLists.txt  bench_blas.py  blas.cpp  cg.cpp  fft.cpp  pi.cpp
examples/common/: idxio.h  progress.h
examples/computer_vision/: CMakeLists.txt  fast.cpp  harris.cpp  matching.cpp  susan.cpp
examples/financial/: CMakeLists.txt  black_scholes_options.cpp  heston_model.cpp  input.h  monte_carlo_options.cpp
examples/getting_started/: CMakeLists.txt  convolve.cpp  integer.cpp  rainfall.cpp  vectorize.cpp
examples/graphics/: CMakeLists.txt  conway.cpp  conway_pretty.cpp  field.cpp  fractal.cpp  gravity_sim.cpp  histogram.cpp  plot2d.cpp  plot3.cpp  surface.cpp
examples/helloworld/: CMakeLists.txt  helloworld.cpp
examples/image_processing/: CMakeLists.txt  adaptive_thresholding.cpp  binary_thresholding.cpp  brain_segmentation.cpp  confidence_connected_components.cpp  deconvolution.cpp  edge.cpp  filters.cpp  gradient_diffusion.cpp  image_demo.cpp  image_editing.cpp  morphing.cpp  optical_flow.cpp  pyramids.cpp
examples/lin_algebra/: CMakeLists.txt  cholesky.cpp  lu.cpp  qr.cpp  svd.cpp
examples/machine_learning/: CMakeLists.txt  bagging.cpp  deep_belief_net.cpp  geneticalgorithm.cpp  kmeans.cpp  knn.cpp  logistic_regression.cpp  mnist_common.h  naive_bayes.cpp  neural_network.cpp  perceptron.cpp  rbm.cpp  softmax_regression.cpp
examples/pde/: CMakeLists.txt  swe.cpp
examples/unified/: CMakeLists.txt  basic.cpp
flare/simd/: CMakeLists.txt  aligned_allocator.h  alignment.h  arch.h  avx2.h  avx512.h  common.h  cpuid.h  dummy.cc  fake.cc  neon.h  rem_pio2.h  scalar.h  simd.h
python/: README.md  __fly_version__.py  setup.cfg  setup.py
python/flare/: __init__.py  algorithm.py  arith.py  array.py  base.py  bcast.py  blas.py  cuda.py  data.py  device.py  features.py  graphics.py  image.py  index.py  interop.py  lapack.py  library.py  ml.py  random.py  signal.py  sparse.py  statistics.py  timer.py  util.py  vision.py
python/tests/: __init__.py  __main__.py
test/: .clang-format  CMakeLists.txt  anisotropic_diffusion.cpp  approx1.cpp  approx2.cpp  array.cpp  array_death_tests.cpp  arrayfire_test.cpp  arrayio.cpp  assign.cpp  backend.cpp  basic.cpp  basic_c.c  bilateral.cpp  binary.cpp  binary_ops.hpp  blas.cpp  canny.cpp  cast.cpp  cholesky_dense.cpp  clamp.cpp  compare.cpp  complex.cpp  confidence_connected.cpp  constant.cpp  convolve.cpp  corrcoef.cpp  covariance.cpp  cuda.cu  diagonal.cpp  diff1.cpp  diff2.cpp  dog.cpp  dot.cpp  empty.cpp  event.cpp  fast.cpp  fft.cpp  fft_large.cpp  fft_real.cpp  (+108 more)
test/CMakeModules/: download_sparse_datasets.cmake
test/mmio/: CMakeLists.txt
test/test-data/: README.md
tests/: CMakeLists.txt
tests/algorithm/: CMakeLists.txt  algo_random_test.h  algo_sort_custom_comp_test.h  algo_sort_test.h  bin_sort_a_test.h  bin_sort_b_test.h  nested_sort_test.h  std_algorithms_adjacent_difference_test.cc  std_algorithms_adjacent_find_test.cc  std_algorithms_all_any_none_of_test.cc  std_algorithms_common_test.cc  std_algorithms_common_test.h  std_algorithms_compile_only_test.cc  std_algorithms_constraints_test.cc  std_algorithms_copy_if_test.cc  std_algorithms_count_test.cc  std_algorithms_equal_test.cc  std_algorithms_exclusive_scan_test.cc  std_algorithms_find_end_test.cc  std_algorithms_find_first_of_test.cc  std_algorithms_find_test.cc  std_algorithms_for_each_test.cc  std_algorithms_helper_functors_test.h  std_algorithms_inclusive_scan_test.cc  std_algorithms_is_sorted_test.cc  std_algorithms_is_sorted_until_test.cc  std_algorithms_lexicographical_compare_test.cc  std_algorithms_min_max_element_ops_test.cc  std_algorithms_mismatch_test.cc  std_algorithms_mod_ops_test.cc  std_algorithms_mod_seq_ops_test.cc  std_algorithms_move_backward_test.cc  std_algorithms_numerics_test.cc  std_algorithms_partition_copy_test.cc  std_algorithms_partitioning_ops_test.cc  std_algorithms_random_access_iterator_test.cc  std_algorithms_remove_copy_if_test.cc  std_algorithms_remove_copy_test.cc  std_algorithms_remove_if_test.cc  std_algorithms_remove_test.cc  (+52 more)
tests/category_files/: cuda_category_test.h  cuda_hostpinned_category_test.h  cuda_uvm_category_test.h  defaultdevice_type_category_test.h  openmp_category_test.h  serial_category_test.h  threads_category_test.h
tests/compile_only/: CMakeLists.txt  array_test.cc  bit_manipulation_test.cc  (+11 more)
(+3359 files in other folders)
