[metadata]
name = flare
version = 1.0.3
description = Python bindings for flare
licence = Apache 2
long_description = file: README.md
long_description_content_type = text/markdown
maintainer = Jeff.li
maintainer_email = lijippy@163.com
url = https://github.com/gottingen/flare
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires =
    >=3.8.0

[options.packages.find]
include = flare
exclude =
    examples
    tests
install_requires =
    numpy~=1.22.0

[options.extras_require]
dev =
    autopep8~=1.6.0
    isort~=5.10.1
    flake8~=4.0.1
    flake8-quotes~=3.2.0
    mypy~=0.942
test =
    pytest~=7.1.2
    pytest-cov~=3.0.0
    pytest-isort~=3.0.0
    pytest-flake8~=1.1.1
    pytest-mypy~=0.9.1

[tool:isort]
line_length = 119
multi_line_output = 4

[flake8]
exclude = venv
application-import-names = flare
import-order-style = pep8
inline-quotes = double
max-line-length = 119

[mypy]
exclude = venv
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
